--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 * {
   margin: 0;
 }
+
+.Logo-spin{
+    width: 100px;
+    background: #1264a3;
+    padding: 50px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    animation: App-logo-spin infinite 5s linear;
+}
+
+@keyframes App-logo-spin {
+  form {transform: rotate(0deg)}
+  to {transform: rotate(360deg)}
+}
